<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="@drawable/button_symbol"
    android:weightSum="35"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    tools:context="com.finance.view.ChildActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:weightSum="2">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/symbol_btc"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_symbol"
            android:id="@+id/button_btc"
            android:onClick="onClick_Btc" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/symbol_eth"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_symbol"
            android:id="@+id/button_eth"
            android:onClick="onClick_Eth" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:weightSum="2">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/symbol_dow"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_symbol"
            android:id="@+id/button_dow"
            android:onClick="onClick_Dow" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/symbol_sp500"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_symbol"
            android:id="@+id/button_sp500"
            android:onClick="onClick_Sp500" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:weightSum="2">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/symbol_nasdaq"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_symbol"
            android:id="@+id/button_nasdaq"
            android:onClick="onClick_Nasdaq" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/symbol_nikkei"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_symbol"
            android:id="@+id/button_nikkei"
            android:onClick="onClick_Nikkei" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:weightSum="2">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/symbol_dollor"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_symbol"
            android:id="@+id/button_dollor"
            android:onClick="onClick_Dollor" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/symbol_usbond"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_symbol"
            android:id="@+id/button_usbond"
            android:onClick="onClick_Usbond" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:weightSum="2">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/symbol_gold"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_symbol"
            android:id="@+id/button_gold"
            android:onClick="onClick_Gold" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/symbol_silver"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_symbol"
            android:id="@+id/button_silver"
            android:onClick="onClick_Silver" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.7"
        android:weightSum="4">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/macd_single"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_macd"
            android:id="@+id/button_macd_single"
            android:onClick="onClick_Macd_Single" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/macd_double"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_macd"
            android:id="@+id/button_macd_double"
            android:onClick="onClick_Macd_Double" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/k_line_average"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_k_line"
            android:id="@+id/button_k_line_average"
            android:onClick="onClick_K_Line_Average" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/k_line_normal"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_k_line"
            android:id="@+id/button_k_line_normal"
            android:onClick="onClick_K_Line_Normal" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.7"
        android:weightSum="5">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/timeframe_day"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_timeframe"
            android:id="@+id/button_timeframe_day"
            android:onClick="onClick_Timeframe_D" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/timeframe_week"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_timeframe"
            android:id="@+id/button_timeframe_week"
            android:onClick="onClick_Timeframe_W" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/timeframe_month"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_timeframe"
            android:id="@+id/button_timeframe_month"
            android:onClick="onClick_Timeframe_M" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/timeframe_quarter"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_timeframe"
            android:id="@+id/button_timeframe_quarter"
            android:onClick="onClick_Timeframe_Q" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/timeframe_year"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="1dp"
            android:background="@drawable/button_timeframe"
            android:id="@+id/button_timeframe_year"
            android:onClick="onClick_Timeframe_Y" />
    </LinearLayout>
</LinearLayout>
